20000313-12:40 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/rtl/inkey.c
     ! Fixed to work with STD_GTAPI on Win32.
   * bin/bld_tpl.*
     + user32.lib added for MSVC
   * source/rtl/oldbox.c
     - Removed non-GT branches.
     ! __BOX() fixed handling of the fifth parameter.
   * source/rtl/console.c
     * OS_DOS_COMPATIBLE -> OS_UNIX_COMPATIBLE
   * source/rtl/achoice.prg
     source/rtl/text.prg
     source/rtl/tgetlist.prg
     % Removed #include "set.ch", since it's included anyway with the
       built-in (default) PP rules.
   * makefile.bc
     + NOTE added about "echo."

20000313-12:42 GMT+3 Alexander Kresin
   * contrib/rdd_ads/ads1.c
     * Little bug fixed in adsAppend()

2000-03-12 21:50 GMT-5 David G. Holm <dholm@ sd-llc.com>
   * source/compiler/harbour.y
     ! Added missing ( char * ) override for C++ on line 1549.

20000312-15:18 EST Paul Tucker <ptucker@sympatico.ca>
   * makefile.vc
     * standardise compile for tone.c and oemansi.c
     + add user32.lib to hbrun.exe and hbdoc.exe
   * source/rtl/tone.c
     * include hbdefs.h (for windows.h) for msvc
   * bin\bld_vc.bat
     + user32.lib

20000312-16:24 GMT+1 Victor Szakats <info@szelvesz.hu>
   * makefile.bc
     ! "echo" commands changed to "echo.", to avoid conflict with an ECHO.EXE
       in the path. Tested OK with DOS/BCC16/31 and WIN32/BCC32/55
   * source/vm/hvm.c
     ! #include "windows.h" -> <windows.h>
   * source/rtl/gt/gtwin.c
     source/rtl/mouse/mousewin.c
     source/rtl/dates.c
     source/rtl/dir.c
     source/rtl/environ.c
     source/rtl/filesys.c
     source/rtl/inkey.c
     source/rtl/isprint.c
     source/rtl/net.c
     source/rtl/oemansi.c
     source/vm/fm.c
     include/hbdefs.h
   - include/hbwinapi.h
     include/Makefile
     * hbwinapi.h functionality moved to hbdefs.h (which is always included
       first)
     * All #include "hbwinapi.h" and #include <windows.h> changed to 
       #define HB_OS_WIN_32_USED